--- a/40990131M_BONUS/Makefile
+++ b/40990131M_BONUS/Makefile
@@ -1,3 +1,11 @@
 all:
 	gcc test.c -o test -lncurses
+	gcc addch.c -o addch -lncurses
+	gcc printw.c -o printw -lncurses
+	gcc addstr.c -o addstr -lncurses
+	gcc getch.c -o getch -lncurses
+	gcc attribute.c -o attribute -lncurses
+	gcc color.c -o color -lncurses
+	gcc window.c -o window -lncurses
+	gcc keyboard.c -o keyboard -lncurses
 	@echo "Complete successfully."
